Fix recovery playbook build and monitoring integration

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -54,6 +54,9 @@
     "@service/recovery-signal-intelligence-orchestrator": "workspace:*",
     "@data/recovery-signal-intelligence-store": "workspace:*",
     "@domain/recovery-signal-intelligence": "workspace:*",
+    "@domain/recovery-playbooks": "workspace:*",
+    "@service/recovery-playbook-engine": "workspace:*",
+    "@data/recovery-playbook-store": "workspace:*",
     "@service/recovery-incident-graph-engine": "workspace:*",
     "@domain/recovery-incident-graph": "workspace:*",
     "@service/recovery-command-forge-orchestrator": "workspace:*",
