--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -130,6 +130,9 @@
       "path": "./../../service/recovery-fabric-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-playbook-lab-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-ops-playbook/tsconfig.json"
     },
     {
