--- a/packages/service/streaming-dashboard-orchestrator/tsconfig.json
+++ b/packages/service/streaming-dashboard-orchestrator/tsconfig.json
@@ -4,28 +4,28 @@
     "outDir": "./dist",
     "composite": true,
     "declaration": true
-    ,
-    "jsx": "react-jsx",
-    "lib": [
-      "DOM",
-      "ES2023"
-    ]
   },
   "include": [
     "src/**/*"
   ],
   "references": [
     {
-      "path": "./../../domain/streaming-engine/tsconfig.json"
+      "path": "./../../data/streaming-dashboard-store/tsconfig.json"
     },
     {
       "path": "./../../domain/streaming-observability/tsconfig.json"
     },
     {
-      "path": "./../../data/streaming-dashboard-store/tsconfig.json"
+      "path": "./../../domain/streaming-engine/tsconfig.json"
     },
     {
-      "path": "./../../service/streaming-dashboard-orchestrator/tsconfig.json"
+      "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
     }
   ]
 }
