feat: expand recovery ops orchestration lab domain and dashboard surface

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -42,7 +42,9 @@
     "@service/recovery-workflow-orchestrator": "workspace:*",
     "@service/recovery-workload-orchestrator": "workspace:*",
     "@service/recovery-readiness-orchestrator": "workspace:*",
+    "@domain/recovery-ops-orchestration-lab": "workspace:*",
     "@service/recovery-coordination-orchestrator": "workspace:*",
+    "@data/recovery-ops-orchestration-lab-store": "workspace:*",
     "@shared/result": "workspace:*",
     "@domain/recovery-readiness": "workspace:*",
     "@domain/recovery-readiness-simulation": "workspace:*",
