--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -47,6 +47,9 @@
       "path": "./../../service/recovery-incident-analytics-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-signal-intelligence-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-workload-orchestrator/tsconfig.json"
     },
     {
