feat: expand incident command lab orchestration and UI domain modules

--- a/packages/domain/incident-command-core/package.json
+++ b/packages/domain/incident-command-core/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@shared/core": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/result": "workspace:*",
     "@domain/recovery-incident-orchestration": "workspace:*"
   }
 }
