--- a/packages/domain/incident-command-core/tsconfig.json
+++ b/packages/domain/incident-command-core/tsconfig.json
@@ -18,5 +18,9 @@
     {
       "path": "./../../domain/recovery-incident-orchestration/tsconfig.json"
     }
+    ,
+    {
+      "path": "./../../shared/result/tsconfig.json"
+    }
   ]
 }
