--- a/packages/service/recovery-incident-command-orchestrator/package.json
+++ b/packages/service/recovery-incident-command-orchestrator/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@data/incident-command-store": "workspace:*",
     "@domain/incident-command-models": "workspace:*",
+    "@domain/incident-command-core": "workspace:*",
     "@shared/result": "workspace:*"
   }
 }
