--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -43,6 +43,7 @@
     "@service/recovery-workflow-orchestrator": "workspace:*",
     "@service/recovery-workload-orchestrator": "workspace:*",
     "@service/recovery-readiness-orchestrator": "workspace:*",
+    "@service/recovery-incident-command-orchestrator": "workspace:*",
     "@domain/recovery-ops-orchestration-lab": "workspace:*",
     "@service/recovery-coordination-orchestrator": "workspace:*",
     "@data/recovery-ops-orchestration-lab-store": "workspace:*",
