--- a/packages/service/recovery-cockpit-orchestrator/package.json
+++ b/packages/service/recovery-cockpit-orchestrator/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@domain/recovery-cockpit-intelligence": "workspace:*",
     "@domain/recovery-cockpit-models": "workspace:*",
+    "@domain/recovery-cockpit-workloads": "workspace:*",
+    "@data/recovery-cockpit-analytics": "workspace:*",
     "@data/recovery-cockpit-insights": "workspace:*",
     "@data/recovery-cockpit-store": "workspace:*",
     "@shared/util": "workspace:*",
