Fix recovery cockpit TypeScript build and expand workspace modules

--- a/packages/data/recovery-cockpit-insights/package.json
+++ b/packages/data/recovery-cockpit-insights/package.json
@@ -17,6 +17,7 @@
     "@data/recovery-cockpit-store": "workspace:*",
     "@domain/recovery-cockpit-models": "workspace:*",
     "@domain/recovery-cockpit-intelligence": "workspace:*",
+    "@data/recovery-cockpit-analytics": "workspace:*",
     "@shared/result": "workspace:*"
   }
 }
