--- a/packages/domain/recovery-cockpit-intelligence/package.json
+++ b/packages/domain/recovery-cockpit-intelligence/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@domain/recovery-cockpit-models": "workspace:*",
+    "@domain/recovery-cockpit-workloads": "workspace:*",
     "@shared/type-level": "workspace:*",
     "@shared/result": "workspace:*"
   }
