--- a/packages/data/recovery-cockpit-insights/tsconfig.json
+++ b/packages/data/recovery-cockpit-insights/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "./../../domain/recovery-cockpit-intelligence/tsconfig.json"
     },
     {
+      "path": "./../../data/recovery-cockpit-analytics/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
     }
   ]
