--- a/packages/app/recovery-drill-observer/tsconfig.json
+++ b/packages/app/recovery-drill-observer/tsconfig.json
@@ -3,7 +3,12 @@
   "compilerOptions": {
     "outDir": "./dist",
     "composite": true,
-    "declaration": true
+    "declaration": true,
+    "jsx": "react-jsx",
+    "lib": [
+      "DOM",
+      "ES2023"
+    ]
   },
   "include": [
     "src/**/*"
@@ -13,7 +18,19 @@
       "path": "./../../service/recovery-drill-observability/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-drill-lab-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../data/recovery-drill-lab-store/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-drill-lab/tsconfig.json"
     }
   ]
 }
