feat(tsz): expand synthetic recovery command network stack and dashboard UI

--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -74,6 +74,9 @@
       "path": "./../../service/recovery-strategy-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-command-network/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-synthesis-orchestrator/tsconfig.json"
     },
     {
