--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -62,6 +62,8 @@
     "@service/recovery-fabric-controller": "workspace:*",
     "@domain/recovery-orchestration-planning": "workspace:*",
     "@service/recovery-strategy-orchestrator": "workspace:*",
-    "@data/recovery-strategy-store": "workspace:*"
+    "@data/recovery-strategy-store": "workspace:*",
+    "@domain/recovery-command-network": "workspace:*",
+    "@shared/type-level": "workspace:*"
   }
 }
