--- a/packages/data/recovery-cockpit-store/package.json
+++ b/packages/data/recovery-cockpit-store/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@domain/recovery-cockpit-models": "workspace:*",
-    "@shared/result": "workspace:*"
+    "@shared/result": "workspace:*",
+    "@shared/util": "workspace:*"
   }
 }
