--- a/packages/data/recovery-cockpit-store/tsconfig.json
+++ b/packages/data/recovery-cockpit-store/tsconfig.json
@@ -14,6 +14,9 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/util/tsconfig.json"
     }
   ]
 }
