Expand monorepo with incident orchestration and recovery lab feature modules

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -32,6 +32,7 @@
     "@service/recovery-operations-engine": "workspace:*",
     "@service/recovery-continuity-lens": "workspace:*",
     "@service/incident-fusion-orchestrator": "workspace:*",
+    "@service/incident-orchestration": "workspace:*",
     "@domain/recovery-command-forge": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
     "@domain/recovery-command-studio": "workspace:*",
@@ -71,6 +72,9 @@
     "@service/recovery-simulation-orchestrator": "workspace:*",
     "@data/recovery-simulation-store": "workspace:*",
     "@domain/recovery-simulation-lab-models": "workspace:*",
+    "@data/repositories": "workspace:*",
+    "@data/incident-hub": "workspace:*",
+    "@domain/incident-management": "workspace:*",
     "@service/recovery-command-control-hub": "workspace:*",
     "@domain/recovery-operations-atlas": "workspace:*",
     "@data/recovery-atlas-store": "workspace:*",
