--- a/packages/data/repositories/package.json
+++ b/packages/data/repositories/package.json
@@ -13,5 +13,8 @@
   "scripts": {
     "build": "tsc -b"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@shared/result": "workspace:*",
+    "@shared/core": "workspace:*"
+  }
 }
