--- a/packages/data/repositories/tsconfig.json
+++ b/packages/data/repositories/tsconfig.json
@@ -8,5 +8,12 @@
   "include": [
     "src/**/*"
   ],
-  "references": []
+  "references": [
+    {
+      "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
+    }
+  ]
 }
