--- a/packages/service/incident-orchestration/tsconfig.json
+++ b/packages/service/incident-orchestration/tsconfig.json
@@ -29,6 +29,9 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../data/repositories/tsconfig.json"
     }
   ]
 }
