chore: add recovery cockpit intent orchestration stack

--- a/packages/app/recovery-cockpit-ui/package.json
+++ b/packages/app/recovery-cockpit-ui/package.json
@@ -17,10 +17,13 @@
     "@domain/recovery-cockpit-models": "workspace:*",
     "@domain/recovery-cockpit-intelligence": "workspace:*",
     "@domain/recovery-cockpit-workloads": "workspace:*",
+    "@domain/recovery-cockpit-orchestration-core": "workspace:*",
     "@data/recovery-cockpit-store": "workspace:*",
     "@data/recovery-cockpit-insights": "workspace:*",
     "@data/recovery-cockpit-analytics": "workspace:*",
+    "@data/recovery-cockpit-intent-store": "workspace:*",
     "@service/recovery-cockpit-orchestrator": "workspace:*",
+    "@service/recovery-cockpit-intent-orchestrator": "workspace:*",
     "@shared/util": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
